<resources>
    <string name="app_name">RhemaHiveApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_label">phone</string>
    <string name="verify_sms">verify sms</string>
    <string name="verify_code">Verify Code</string>
    <string name="rhema_onboard">Rhema Onboard</string>
    <string name="rhema_hive_onboarding_page">Rhema Hive Onboarding Page</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="example_domain_com">example@domain.com</string>
    <string name="country_auto_set">Country</string>
    <string name="gend_def">---Select Gender---</string>
    <string name="say_something_about_yourself">Say something about yourself</string>
    <string name="postal_code">Postal Code</string>
    <string name="onboard_user">Onboard User</string>
    <string name="select_church">---Select Church---</string>
    <string name="coc">Church of Christ</string>
    <string name="redeem">Redeemed Christian Church of God</string>
    <string name="jw">Jehovah Witness</string>
    <string name="eckankar">Eckankar</string>
    <string name="lord_cho">Lords Chosen</string>
    <string name="catholic">Catholic</string>
    <string name="mfm">Mountain of Fire and Miracles Center Church</string>
    <string name="sda">Seventh Day Adventist</string>
    <string name="anglican">Anglican Church</string>
    <string name="chrem">Christ Embassy</string>
    <string name="honr">House on the Rock</string>
    <string name="winn">Winners Chapel</string>
    <string name="branch_def">---Select Branch Name---</string>
    <string name="coc1">Church of Christ1</string>
    <string name="coc2">Church of Christ2</string>
    <string name="coc3">Church of Christ3</string>
    <string name="redeem1">Redeemed Christian Church of God1</string>
    <string name="redeem2">Redeemed Christian Church of God2</string>
    <string name="redeem3">Redeemed Christian Church of God3</string>
    <string name="jw1">Jehovah Witness1</string>
    <string name="jw2">Jehovah Witness2</string>
    <string name="jw3">Jehovah Witness3</string>
    <string name="eckankar1">Eckankar1</string>
    <string name="eckankar2">Eckankar2</string>
    <string name="eckankar3">Eckankar3</string>
    <string name="lord_cho1">Lords Chosen1</string>
    <string name="lord_cho2">Lords Chosen2</string>
    <string name="lord_cho3">Lords Chosen3</string>
    <string name="catholic1">Catholic1</string>
    <string name="catholic2">Catholic2</string>
    <string name="catholic3">Catholic3</string>
    <string name="mfm1">Mountain of Fire and Miracles Center Church1</string>
    <string name="mfm2">Mountain of Fire and Miracles Center Church2</string>
    <string name="mfm3">Mountain of Fire and Miracles Center Church3</string>
    <string name="sda1">Seventh Day Adventist1</string>
    <string name="sda2">Seventh Day Adventist2</string>
    <string name="sda3">Seventh Day Adventist3</string>
    <string name="anglican1">Anglican Church1</string>
    <string name="anglican2">Anglican Church2</string>
    <string name="anglican3">Anglican Church3</string>
    <string name="chrem1">Christ Embassy1</string>
    <string name="chrem2">Christ Embassy2</string>
    <string name="chrem3">Christ Embassy3</string>
    <string name="honr1">House on the Rock1</string>
    <string name="honr2">House on the Rock2</string>
    <string name="honr3">House on the Rock3</string>
    <string name="winn1">Winners Chapel1</string>
    <string name="winn2">Winners Chapel2</string>
    <string name="winn3">Winners Chapel3</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="number_samp">+23408xxxxxxxx</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="please_read">Terms of Use</string>
    <string name="i_have_read_and_accepted_the_terms_and_conditions_of_rhema_hive">I have Read and accepted the Terms and Conditions of Rhema Hive</string>
    <string name="continue_btn">Continue</string>
    <string name="tc_text_cont">Welcome to the RhemaHive digital service application. These are our terms and conditions for use of the application which you may access through the information section of the application. Please read these terms and conditions of use carefully before accessing, using or obtaining any materials, information, products or services through the RhemaHive platform. In these Terms, “we”, “us”, “our”, or “RhemaHive”, refers to the RhemaHive Corporation, and “you” or “your” refers to you as the user of our website or application.

By accessing and using the RhemaHive  mobile  application , you accept and agree to be bound by our terms and conditions of use. In addition, when using this service, you will be subject to the guidelines and rules enclosed in this agreement. If you do not agree to abide by our terms and conditions, then you may not use our website or application.
</string>
    <string name="read_more">Click to Read Our Full Terms and Conditions</string>
    <string name="twitter_consumer_key" translatable="false">tAdQj0MEWYagaEsMd5Rqzvk9g</string>
    <string name="twitter_consumer_secret" translatable="false">YEtfgnQTGtGVjwtViV7cEF5Dzw0molopZgqcbXDkgl9ju2x5hd</string>
    <string name="facebook_application_id" translatable="false">184674242642930</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb184674242642930</string>
    <string name="sign_out">Sign Out</string>
    <string name="login_with">Login with</string>
    <string name="or_lab">or</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="sign_in_text">Sign In !</string>
    <string name="sign_up_profile">Sign Up ! !</string>
    <string name="dont_have_an_account">Dont have an Account ?</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="email_hint">example@yourdomain.com</string>
    <string name="password_hint">Password</string>
    <string name="are_you_a">Are You a ?</string>
    <string name="user_dec_label">User</string>
    <string name="n_e_x_t">N E X T > > ></string>
    <string name="church_lab">Church</string>
    <string name="upload_church_picture">Upload Church
        Picture</string>
    <string name="enter_church_name">Enter Church Name</string>
    <string name="church_name">Church Name</string>
    <string name="enter_church_address">Enter Church Address</string>
    <string name="church_phone_no">Church Phone No</string>
    <string name="enter_church_phone_no">Enter Church Phone No</string>
    <string name="enter_church_leaders_name">Enter Church Leaders Name</string>
    <string name="church_minister_evangelist_pastor_bishop_g_o">Church Minister | Evangelist | Pastor | Bishop | G.O</string>
    <string name="enter_church_email_address">Enter Church Email Address</string>
    <string name="onboard_church">Onboard Church</string>
    <string name="choose_user_and_contine">Select User !</string>
    <string name="church_loc_addr">Church Location | Address</string>
    <string name="continue_with_phone_verification">Continue with Phone Verification</string>
    <string name="phone_verification_lab">Phone Verification</string>
    <string name="sign_up_rhem">Sign Up ! !</string>
    <string name="already_registered">Already Registered ?</string>
    <string name="maxDate">January//01//2050</string>
    <string name="date_join">/</string>
    <string name="tap_on_your_gender">Tap on your gender</string>
    <string name="fname_hint">Fred</string>
    <string name="lname_hint">Joe</string>
    <string name="upload_profile_picture">Upload Profile Picture</string>
    <string name="ent_fname">Enter First Name</string>
    <string name="ent_lname">Enter Last Name</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_your_address">Enter Your Address</string>
    <string name="address_hint">Suite 15 Close 24 Parkson Estate Uyo Nigeria</string>
    <string name="select_country_of_residence">Select Country of Residence</string>
    <string name="city_sample">Lagos | Enugu  | Kano |  Uyo | e.t.c</string>
    <string name="enter_your_city">Enter your City</string>
    <string name="tap_to_select_dob">Tap to Select DoB</string>
    <string name="enter_date_of_birth">Enter Date of Birth</string>
    <string name="write_a_brief_intro_about_you_below">Write a brief intro about you below</string>
    <string name="tell_us_about_yourself">Tell Us About Yourself</string>
    <string name="enter_your_postal_code">Enter Your Postal Code</string>
    <string name="postal_hint">101283</string>
    <string name="reset_password_pane">Reset Password Pane</string>
    <string name="reset_password">Reset Password</string>
    <string name="ver_email">Verify Email</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_rhema_hive_user_portal">RhemaHiveUserPortal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">About Us</string>
    <string name="subscriptions"></string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_tools">Edit Profile</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Settings</string>
    <string name="title_activity_rhema_hive_church_portal">RhemaHiveChurchPortal</string>
    <string name="write_a_brief_intro_about_the_church">Write a brief intro about the church..</string>
    <string name="enter_church_description">Enter Church Description</string>
    <string name="male_rad">Male</string>
    <string name="test_upload">Test Upload</string>
    <string name="add_ons">Add-ons</string>
    <string name="church_summary">Church Summary</string>
    <string name="total_post_count">Total Post Count</string>
    <string name="total_video_count">Total Video Count</string>
    <string name="total_member_count">Total Member Count</string>
    <string name="total_post_made">Total Post made</string>
    <string name="profile_summary">Profile Summary</string>
    <string name="verification_prompt">Verification Prompt</string>
    <string name="messaging">Messaging</string>
    <string name="newsroom">NewsRoom</string>
    <string name="media">Media</string>
    <string name="manage_dashboard">Manage Dashboard</string>
    <string name="message">Message</string>
    <string name="news_lab">News</string>
    <string name="media_lab">Media</string>
    <string name="dashboard_lab">Dashboard</string>
    <string name="communicate">Communicate</string>
    <string name="user_port_messaging">Messaging</string>
    <string name="communicate_group">Communicate</string>
    <string name="search_chats">Search Chats</string>
    <string name="group_chats">Group Chats</string>
    <string name="starred_chats">Starred Chats</string>
    <string name="add_friends">Add Friends</string>
    <string name="start_typing">Start Typing</string>
    <string name="filter_friends">Filter</string>
    <string name="apply_search">Apply</string>
    <string name="sorted_by_churches">sorted by churches</string>
</resources>