<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_color"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_about_color"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_phone_color"
            android:title="@string/menu_contact_us" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_settings_color"
            android:title="@string/action_settings" />
    </group>

    <item android:title="@string/communicate_group">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share_color"
                android:title="@string/menu_share" />
            <!--<item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_send" />-->
        </menu>
    </item>

</menu>
