<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="260dp"
    android:padding="8dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/com_smart_login_code"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">


    <androidx.cardview.widget.CardView
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_alignParentLeft="true"
        android:id="@+id/church_retr_logg2"
        app:cardCornerRadius="39dp"
        android:layout_centerHorizontal="true"
        android:innerRadius="0dp"
        android:shape="ring"
        android:thicknessRatio="1.3"
        android:layout_alignParentStart="true">

    <ImageView
        android:id="@+id/church_retr_logg"
        android:layout_width="73dp"
        android:layout_height="73dp"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/nav_header_desc"
        android:layout_margin="4dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/rhema_logg"
        android:layout_alignParentStart="true"
         />

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/church_retr_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"

        android:layout_margin="16dp"
        android:layout_toEndOf="@id/church_retr_logg2"
        android:layout_toRightOf="@id/church_retr_logg2"
        android:fontFamily="@font/fauna_one"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:textColor="@color/design_default_color_surface"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="14sp"
        tools:text="Church Name" />

    <TextView
        android:id="@+id/church_retr_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_margin="8dp"
        android:textSize="12sp"
        android:textColor="@color/design_default_color_surface"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/fauna_one"
        android:layout_below="@id/church_retr_logg2"
        tools:text="@string/email_hint"

        android:drawableStart="@drawable/ic_email_white"
        android:drawableLeft="@drawable/ic_email_white"
         />

    <TextView
        android:id="@+id/church_retr_phone"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_below="@id/church_retr_email"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="8dp"
        android:drawableStart="@drawable/ic_phone_white"
        android:drawableLeft="@drawable/ic_phone_white"
        android:fontFamily="@font/fauna_one"
        android:textColor="@color/design_default_color_surface"
        android:textSize="12sp"
        tools:text="@string/number_samp"
         />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/church_retr_phone"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:id="@+id/church_sum_lab"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/fauna_one"
        android:text="@string/church_summary"
        android:gravity="center_horizontal"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/church_mem_count_lab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/church_sum_lab"

        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"

        android:contentDescription="@string/total_member_count"
        android:drawableStart="@drawable/ic_group_white"
        android:drawableLeft="@drawable/ic_group_white"
        android:fontFamily="@font/fauna_one"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_surface"
        tools:text="500" />

    <TextView
        android:id="@+id/church_video_count_lab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/church_sum_lab"

        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"

        android:layout_toEndOf="@id/church_mem_count_lab"
        android:layout_toRightOf="@id/church_mem_count_lab"
        android:contentDescription="@string/total_video_count"
        android:drawableStart="@drawable/ic_video_white"
        android:drawableLeft="@drawable/ic_video_white"
        android:fontFamily="@font/fauna_one"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_surface"
        tools:text="1500" />

    <TextView
        android:id="@+id/church_post_count_lab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/church_sum_lab"


        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"


        android:layout_toEndOf="@id/church_video_count_lab"
        android:layout_toRightOf="@id/church_video_count_lab"
        android:contentDescription="@string/total_post_made"
        android:drawableStart="@drawable/ic_file_upload_white"
        android:drawableLeft="@drawable/ic_file_upload_white"
        android:fontFamily="@font/fauna_one"
        android:textColor="@color/design_default_color_surface"
        tools:text="800"
        android:layout_marginStart="24dp" />






</RelativeLayout>
