<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".RhemaHiveViewPackage.RhemaHiveTermsCondition"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/tc_constr_lay"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tc_constr_lay"
        app:layout_constraintRight_toRightOf="@id/tc_constr_lay"
        app:layout_constraintLeft_toLeftOf="@id/tc_constr_lay"
        android:textSize="14sp"
        android:textColor="#1e272e"
        android:fontFamily="@font/arbutus_slab"
        android:id="@+id/tv_tc"
        android:drawableLeft="@drawable/rhema_logg"
        android:drawableStart="@drawable/rhema_logg"
        android:textAlignment="center"
        android:layout_margin="16dp"
        />

    <TextView
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_margin="16dp"
        android:textAlignment="center"
        android:id="@+id/tc_tv_cont"
        android:fontFamily="@font/arbutus_slab"
        android:textColor="#353b50"
        android:lineSpacingExtra="5.3sp"
        android:text="@string/tc_text_cont"
        />

    <TextView
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tc_tv_cont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_margin="16dp"
        android:fontFamily="@font/arbutus_slab"
        android:textAlignment="center"
        android:id="@+id/tc_tv_read_more"
        android:textColor="#353b50"
        android:clickable="true"
        android:lineSpacingExtra="5.3sp"
        android:textStyle="bold"
        android:focusable="true"
        android:text="@string/read_more"
        />


    <CheckBox
        android:id="@+id/rhema_tc_radio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/i_have_read_and_accepted_the_terms_and_conditions_of_rhema_hive"
        tools:layout_editor_absoluteX="165dp"
        tools:layout_editor_absoluteY="245dp"
        app:layout_constraintTop_toBottomOf="@+id/tc_tv_read_more"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:fontFamily="@font/arbutus_slab"
        android:layout_margin="16dp"
        android:textSize="14sp"
        android:textColor="#353b50"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/tc_constr_lay"
        app:layout_constraintRight_toRightOf="@+id/tc_constr_lay"
        app:layout_constraintTop_toBottomOf="@id/rhema_tc_radio"
        app:layout_constraintBottom_toBottomOf="@id/tc_constr_lay"
        android:text="@string/continue_btn"
        android:fontFamily="@font/arbutus_slab"
        android:background="#FFFFFF"
        android:id="@+id/btn_click_cont"
        android:textColor="#353b50"
        android:layout_margin="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>