<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RhemaHiveViewPackage.RhemaHiveSignUpActivity">

    <TextView
        android:id="@+id/sup_tv_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:shadowColor="#2d000000"
        android:fontFamily="@font/arbutus_slab"
        android:shadowDy="1"
        android:drawableTop="@drawable/rhema_logg"
        android:shadowRadius="2"
        android:textColor="#353b50"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="36dp"
        android:id="@+id/emailsup_id_text"
        app:layout_constraintTop_toBottomOf="@id/sup_tv_label">

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:drawableStart="@drawable/ic_email_add"
        android:id="@+id/email_sup_app_edt"
        android:fontFamily="@font/arbutus_slab"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint"
        android:drawableLeft="@drawable/ic_email_add"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="36dp"
        android:id="@+id/passup_id"
        app:layout_constraintTop_toBottomOf="@+id/emailsup_id_text">

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:hint="@string/password_hint"
            android:id="@+id/pass_sup_app_edt"
            android:fontFamily="@font/arbutus_slab"
            android:inputType="textVisiblePassword"
            android:drawableStart="@drawable/ic_security"
            android:drawableLeft="@drawable/ic_security"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/pBar"
        android:layout_marginLeft="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginRight="18dp"
        android:layout_marginEnd="18dp"
        android:fontFamily="@font/arbutus_slab"
        android:layout_marginBottom="36dp"
        android:layout_marginTop="36dp"
        android:text="@string/sign_up_rhem"
        android:shadowColor="#2d000000"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:shadowDy="1"
        android:padding="12dp"
        android:shadowRadius="2"
        android:id="@+id/sign_upreg_btn"
        app:layout_constraintTop_toBottomOf="@+id/passup_id"/>

    <TextView
        android:id="@+id/dont_have_lab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/sign_upreg_btn"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="8dp"
        android:shadowColor="#2d000000"
        android:textColor="#353b50"
        android:textSize="16sp"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:textAlignment="textStart"
        android:gravity="start"
        android:text="@string/already_registered"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/sign_inreg_lab"/>

    <TextView
        android:id="@+id/sign_inreg_lab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/sign_upreg_btn"
        android:layout_marginTop="16dp"
        android:layout_marginRight="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:shadowColor="#2d000000"
        android:textColor="#353b50"
        android:textSize="16sp"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:textAlignment="textStart"
        android:gravity="start"
        android:text="@string/sign_in_text"
        app:layout_constraintLeft_toRightOf="@+id/dont_have_lab"
        app:layout_constraintRight_toRightOf="parent"/>

<ProgressBar
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/passup_id"
    app:layout_constraintStart_toEndOf="@id/sign_upreg_btn"
    android:layout_marginTop="36dp"
    android:layout_marginBottom="36dp"
    android:layout_marginStart="18dp"
    android:layout_marginLeft="18dp"
    android:layout_marginEnd="18dp"
    android:layout_marginRight="18dp"
    android:id="@+id/pBar"
    app:layout_constraintLeft_toRightOf="@id/sign_upreg_btn"/>


</androidx.constraintlayout.widget.ConstraintLayout>